--- a/form.html
+++ b/form.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Form Activity</title>
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
         <h1>Registration Form</h1>
