--- a/form.html
+++ b/form.html
@@ -2,30 +2,39 @@
 <html>
     <head>
         <title>Form Activity</title>
+       <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
-        <h1>Registration Form</h1>
         <form>
-        First Name: <input type="text" name="firstname"/>
+        <h1>Registration Form</h1>
+        First Name: <br />
+        <input type="text" name="firstname"/>
         <br />
-        Last Name: <input type="text" name="lastname"/>
+        Last Name: <br />
+        <input type="text" name="lastname"/>
         <br />
-        Nick Name: <input type="text" name="nickname"/>
+        Nick Name: <br />
+        <input type="text" name="nickname"/>
         <br />
-        Email: <input type="email" name="email" />
+        Email: <br />
+        <input type="email" name="email" />
         <br />
-        Password: <input type="password" name="password" />
+        Password: <br />
+        <input type="password" name="password" />
         <br />
-        Date of Birth: <input type="date" name="birthdate" />
-        <br />
-        Gender:
+         Date of Birth: <br /> 
+         <input type="date" class="full" name="bday" />  <br />
+        Gender: <br />
         <input type="radio" name="male" value="male"/> Male
-        <input type="radio" name="female" value="female"/> Female
+        <input type="radio" name="female" value="female"/>Female
+        <input type="radio" name="other" value="other"/> Other
         <br />
-        Mobile: <input type="number" name="mobile" />
+        Mobile: <br />
+        <input type="number" class="full" name="mobile" />
         <br />
-        Address: <textarea name="address" cols="25" rows="10"></textarea>
+        Address: <br />
+        <textarea name="address" cols="25" rows="10"></textarea>
         <br />
         <input type="submit" name="submit" value="Submit"/>
         <input type="reset" name="reset" value="Reset"/>
